--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body style="padding: 0; margin: 0; box-sizing: border-box">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
